# omnipkg-devops-ai

./: .dockerignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_NOTICES.txt  docker-entrypoint.sh  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  top_level.txt  tox.ini
docs/: LIBRESOLVER.md  advanced_management.md  cli_commands_reference.md  conf.py  docs.yml  future_roadmap.md  getting_started.md  index.md  python_hot_swapping.md  requirements.txt  runtime_switching.md
licenses/: aiohappyeyeballs.txt  aiohttp.txt  aiosignal.txt  attrs.txt  authlib.txt  certifi.txt  filelock.txt  frozenlist.txt  idna.txt  packaging.txt  propcache.txt  python-magic.txt  redis.txt  tqdm.txt  typing-extensions.txt  urllib3.txt  uv.txt  yarl.txt
locale/: omnipkg.pot
src/omnipkg/: .pylintrc  8pkg.py  CondaGuard.py  __init__.py  __main__.py  activator.py  cache.py  cli.py  common_utils.py  core.py  deptimemachine.py  i18n.py  libresolver.py  loader.py  lockmanager.py  package_meta_builder.py
src/omnipkg/_vendor/filelock/: _windows.py
src/omnipkg/commands/: run.py
src/omnipkg/conda-recipe/: meta.yaml
src/omnipkg/installation/: metadata_cache.py  package_index_registry.py  verification_groups.py  verification_hooks.py  verification_strategy.py
src/omnipkg/integration/: __init__.py  ci_integration.py  cli_executor.py  environment.py
src/omnipkg/isolation/: gpu_ipc.py  patchers.py  resource_monitor.py  runners.py  sterile.py  switchers.py  worker_controller.py  worker_daemon.py  workers.py
src/omnipkg/locale/: omnipkg.pot
src/omnipkg/locale/am/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/ar/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/ar_eg/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/bn/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/da/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/de/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/es/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/fr/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/hi/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/hr/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/id/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/it/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/ja/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/ko/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/nl/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/no/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/pl/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/pt_BR/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/ru/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/sv/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/sw/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/tr/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/vi/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/locale/zh_CN/LC_MESSAGES/: omnipkg.mo  omnipkg.po
src/omnipkg/utils/: ai_import_healer.py  flask_port_finder.py  warning_silencer.py
src/tests/: quantum_chaos.py  test_cli_healing.py  test_concurrency_optimization.py  test_concurrent_install.py  test_flask_port_finder.py  test_loader_stress_test.py  test_multiverse_analysis.py  test_multiverse_healing.py  test_native_ipc_proper.py  test_old_flask.py  test_old_flask_dev.py  test_old_rich.py  test_pip_multiverse_analysis.py  test_rich_switching.py  test_swap_install.py  test_tensorflow_switching.py  test_uv_switching.py  test_version_combos.py
templates/: index.html
