[build-system]
# Python 3.7 compatible setuptools (newer versions require Python 3.8+)
requires = ["setuptools>=50.0,<70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnipkg"
version = "2.0.6"
authors = [
  { name = "1minds3t", email = "1minds3t@proton.me" },
]
description = "The Ultimate Python Dependency Resolver. One environment. Infinite packages. Zero conflicts."
readme = "README.md"
requires-python = ">=3.7, <3.15"

# Use old-style license for Python 3.7 compatibility
license = { text = "AGPL-3.0-only OR LicenseRef-Proprietary" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Environment :: Console",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]

dependencies = [
    "requests>=2.20",
    "psutil>=5.9.0",
    "typer>=0.4.0",
    "rich>=10.0.0",

    # Filelock: LTS backport for <3.10, official for >=3.10 (CVE-2025-68146)
    "filelock-lts>=2025.68146; python_version < '3.10'",
    "filelock>=3.20.1; python_version >= '3.10'",
    
    # Packaging version splits - CRITICAL: pip-audit needs >=21.0 on ALL versions
    "packaging>=21.0,<22.0; python_version < '3.10'",
    "packaging>=23.0; python_version >= '3.10'",
    
    # tomli backport for Python < 3.11
    "tomli>=1.0.0; python_version < '3.11'",
    
    # typing-extensions backport
    "typing-extensions>=4.0.0; python_version < '3.10'",
    
    # importlib-metadata backport
    "importlib-metadata>=1.0; python_version < '3.8'",
    
    # dataclasses backport
    "dataclasses>=0.6; python_version == '3.7'",
    
    # Authlib - version split by Python
    "authlib>=1.6.5; python_version >= '3.9'",        # Patched for recent CVEs
    "authlib>=1.3.2,<1.4.0; python_version == '3.8'", # Max support for 3.8
    "authlib>=1.2.1,<1.3.0; python_version == '3.7'", # Last known stable for 3.7
    # TODO: Create authlib-lts to backport security fixes for Python 3.7-3.8
    
    # aiohttp
    "aiohttp>=3.7.0,<3.9.0; python_version == '3.7'",
    "aiohttp>=3.8.0,<3.11.0; python_version == '3.8'",
    "aiohttp>=3.13.1; python_version >= '3.9'",
    
    # Security scanning
    "safety>=3.7.0; python_version >= '3.10' and python_version < '3.14'",
    "marshmallow>=4.1.2; python_version >= '3.10'",  # CVE-2025-68480 override

    # pip-audit fallback (requires packaging>=21.0 on ALL versions)
    "pip-audit; python_version < '3.9'",
    "pip-audit>=2.6.0; python_version >= '3.14'",
    
    # uv
    "uv>=0.9.6; python_version >= '3.8'",
]

[project.optional-dependencies]
full = [
    "tqdm>=4.67.1",  # CVE-2024-34062 patched
    "python-magic>=0.4.18",
    "redis>=4.0.0,<5.0; python_version == '3.7'",
    "redis>=5.0; python_version >= '3.8'",
]

dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0; python_version >= '3.8'",
    "ruff>=0.1.0; python_version >= '3.8'",
]

[project.urls]
Homepage = "https://github.com/1minds3t/omnipkg"
"Bug Tracker" = "https://github.com/1minds3t/omnipkg/issues"
PyPi = "https://pypi.org/project/omnipkg/"
Conda-Forge = "https://anaconda.org/conda-forge/omnipkg"
Docs = "https://github.com/1minds3t/omnipkg/tree/main/docs"

[project.scripts]
omnipkg = "omnipkg.cli:main"
8pkg = "omnipkg.cli:main"
OMNIPKG = "omnipkg.cli:main"
8PKG = "omnipkg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["omnipkg*", "omnipkg.*", "tests*"]
exclude = [
    "build*",
    "dist*",
    "*.egg-info*",
    "dev_tools*",
]

[tool.setuptools.package-data]
omnipkg = [
    "locale/**/*.mo",
    "locale/**/*.pot",
]

[tool.setuptools]
# Old setuptools format (compatible with setuptools 50.x)
license-files = ["LICENSE", "COMMERCIAL_LICENSE.md"]
include-package-data = true